[Vertical Tabs]: Clean up list usage in TabListMediatorUnitTest
Additionally, this CL introduces the mockRepresentativeTabs helper
method to deduplicate verbose mock stubbing setups across several test
cases.

Bug: 509226293
Test: TabListMediatorUnitTest
Change-Id: Ide351ccf7334ba0bac1f5489761eeea9e28dbebb
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7906397
Commit-Queue: Gazal Agarwal <agazal@google.com>
Auto-Submit: Gazal Agarwal <agazal@google.com>
Reviewed-by: Sky Malice <skym@chromium.org>
Commit-Queue: Sky Malice <skym@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1642653}